--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Ordo backend",
   "main": "server.ts",
+  
   "scripts": {
-    "dev": "nodemon --ext ts --exec ts-node src/server.ts",
+   "dev": "nodemon --ext ts --exec ts-node src/server.ts",
     "start": "node dist/server.js",
     "build": "tsc"
   },
@@ -26,6 +27,7 @@
     "process": "^0.11.10",
     "require": "^2.4.20",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.3",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.5"
   },
